[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbpd-app"
version = "1.0.0"
description = "RBPD - AI-powered document to BRD converter"
authors = [{name = "RBPD Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.35.0",
    "pandas==2.2.2",
    "azure-storage-blob==12.19.1",
    "openai==1.55.3",
    "httpx==0.27.2",
    "azure-cosmos==4.9.0",
    "python-dotenv",
    "Pillow"
]

[project.urls]
Homepage = "https://github.com/yourusername/rbpd-app"
Repository = "https://github.com/yourusername/rbpd-app"

[tool.setuptools]
packages = ["rbpd_dev"]